<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".privacy_policy.PrivacyPolicyActivity">
    <TextView
        android:id="@+id/readPrivacyPolicyTitleTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/privacy_policy"
        android:textSize="@dimen/_18ssp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/colorGreen"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:id="@+id/privacyPolicyScrollView"
        app:layout_constraintTop_toBottomOf="@+id/readPrivacyPolicyTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/privacyPolicyReadFromOnlineButtonId"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <TextView
            android:text="@string/privacy_policy_description"
            android:textSize="@dimen/_13ssp"
            android:padding="@dimen/_3sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
    <Button
        android:id="@+id/privacyPolicyReadFromOnlineButtonId"
        app:layout_constraintTop_toBottomOf="@+id/privacyPolicyScrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:text="@string/read_from_online"
        android:paddingStart="@dimen/_25sdp"
        android:paddingEnd="@dimen/_25sdp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/general_button_background"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>