<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MainActivity">

    <TextView
        android:id="@+id/instructionTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/home_activity_instruction"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/wifiInfoCardView"
        app:layout_constraintTop_toBottomOf="@+id/instructionTextView"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/wifi"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"/>
            <TextView
                android:id="@+id/wifiSsidNameTextView"
                android:text="@string/wifi_not_connected"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/widiBtn"
        style="@style/MyButtonStyle"
        app:layout_constraintTop_toBottomOf="@+id/wifiInfoCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/general_button_background"
        android:text="@string/start" />
    <androidx.cardview.widget.CardView
        android:id="@+id/sliderRootCardView"
        app:layout_constraintTop_toBottomOf="@+id/widiBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:sliderAnimationDuration="3000"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="1000"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="@dimen/_12sdp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="@dimen/_5sdp"
            app:sliderIndicatorRadius="@dimen/_5sdp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="3"
            app:sliderStartAutoCycle="true" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>